--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,80 @@
+* {
+  box-sizing: border-box;
+}
+
+html,body {
+  position:relative;
+  width: 100%; height:auto;
+  margin:0; padding:0;
+}
+
+#wrap {
+  width: 100%; height:auto;
+  padding-top: 50px;
+}
+
 .hidden {
   display:none;
+}
+
+img {
+  width:100%; height:100%;
+}
+
+
+#login-form, #greeting, #clock, #todo-form, #quote {
+  width:100%; height:auto;
+  margin-bottom:24px;
+  text-align:center;
+}
+
+#login-form input,
+#todo-form input {
+  width:200px; height:auto; 
+  border:none;
+  border-bottom: 1px solid #333;
+  text-align: center;
+}
+
+#login-form input { margin-bottom: 16px;}
+
+#login-form button {
+  display: block;
+  width:auto; height:auto;
+  margin:auto;
+}
+
+#login-form button,
+#todo-list button {
+  background-color: transparent;
+  border:none;
+}
+
+#todo-list { 
+  width:80%; height:auto;
+  margin:auto; 
+  padding-left: 10px;
+  text-align: center;
+  list-style: none;
+}
+
+#todo-form input {
+  margin-bottom: 20px;
+}
+
+#quote span {
+  display:block;
+  width:100%; height:auto;
+  padding:0 50px;
+}
+
+#quote span:first-child {
+  margin-bottom: 10px;
+}
+
+#weather {
+  position:absolute;
+  top:10px; right:10px;
+  z-index: 10;
+  width:200px; height:auto;
 }
