--- a/css/style.css
+++ b/css/style.css
@@ -76,5 +76,6 @@ img {
   position:absolute;
   top:10px; right:10px;
   z-index: 10;
-  width:200px; height:auto;
+  width:250px; height:auto;
+  text-align: right;
 }
