--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,26 @@
 }
 
 html,body {
-  position:relative;
-  width: 100%; height:auto;
+  width: 100%; height:100%;
   margin:0; padding:0;
+  font-family: 'Pretendard', sans-serif;
+  font-size:20px;
+  font-weight:400;
+  color:#fff;
+  text-shadow: #444 1px 2px 3px;
 }
 
+
 #wrap {
-  width: 100%; height:auto;
-  padding-top: 50px;
+  position:absolute;
+  z-index:1;
+  width: 100%; height:100%;
+  background-color:rgba(0, 0, 0, 0.3)
+}
+
+#display-wrap {
+  width:100%; height:100%;
+  padding-top:500px;
 }
 
 .hidden {
@@ -21,6 +33,10 @@ img {
   width:100%; height:100%;
 }
 
+h1, h2 {
+  margin:0;
+  text-shadow: #444 1px 2px 10px;
+}
 
 #login-form, #greeting, #clock, #todo-form, #quote {
   width:100%; height:auto;
@@ -28,12 +44,27 @@ img {
   text-align:center;
 }
 
+
 #login-form input,
 #todo-form input {
-  width:200px; height:auto; 
+  width:500px; height:auto; 
   border:none;
-  border-bottom: 1px solid #333;
+  border-bottom: 3px solid #fff;
   text-align: center;
+  font-family: 'Pretendard', sans-serif;
+  font-size:30px;
+  color:#fff;
+  text-shadow: #444 1px 2px 2px;
+  background-color:transparent;
+}
+
+#login-form input:focus,
+#todo-form input:focus {
+   outline:none;
+}
+
+input::placeholder {
+  color:#fff;
 }
 
 #login-form input { margin-bottom: 16px;}
@@ -44,22 +75,40 @@ img {
   margin:auto;
 }
 
+#clock {
+  font-size:7rem;
+  font-weight:600;
+}
+
+#greeting {
+  font-size:3rem;
+  font-weight:500;
+}
+
 #login-form button,
 #todo-list button {
   background-color: transparent;
   border:none;
+  font-family: 'Pretendard', sans-serif;
+  font-weight:500;
+  font-size:30px;
+  color:#fff;
+  text-shadow: #444 1px 2px 3px;
 }
 
 #todo-list { 
   width:80%; height:auto;
   margin:auto; 
   padding-left: 10px;
+  font-size:1.2rem;
   text-align: center;
   list-style: none;
 }
 
 #quote {
-  margin-top: 20px;
+  position:fixed;
+  bottom:0;
+  margin-top: 12rem;
 }
 
 #quote span {
@@ -78,4 +127,17 @@ img {
   z-index: 10;
   width:250px; height:auto;
   text-align: right;
+}
+
+@media screen and (max-width: 767px) {
+  #clock {
+    font-size:5rem;
+  }
+  #greeting {
+    font-size: 3rem;
+  }
+  #quote {
+    margin-top: 7rem;
+  }
+  
 }
